Fix spacing issue after testing animation1

--- a/style.css
+++ b/style.css
@@ -14,7 +14,6 @@ body {
   display: flex;
   flex-direction: column;
   font-family: "Red Hat Text", sans-serif;
-  /* min-height: 100vh; */
 }
 
 .blob {
@@ -35,6 +34,7 @@ header {
   display: flex;
   flex-direction: column;
   background: #f3f3f3;
+  min-height: 100vh;
   overflow: hidden;
 }
 
@@ -125,8 +125,8 @@ hr {
   align-items: center;
   justify-content: space-around;
   flex-wrap: wrap;
-  gap: 24px;
   min-height: 100vh;
+  gap: 24px;
 }
 
 .cta {
@@ -351,6 +351,9 @@ main {
 }
 
 @media (max-width: 550px) {
+  header {
+    min-height: 0;
+  }
   .navbar {
     display: none;
   }
@@ -382,9 +385,13 @@ main {
 
   .hero-section {
     flex-direction: column;
+    justify-content: space-between;
+    min-height: 0;
     padding-left: 8px;
     padding-right: 8px;
-    gap: 16px;
+    padding-top: 16px;
+    padding-bottom: 16px;
+    gap: 20px;
   }
   .cta {
     display: flex;
